# NIM

./: .gitignore  Cargo.toml
godot/level_builder/: SimpleNimNode.tscn
godot/level_builder/level_builder_base/: NimGroup.tscn  NimNode.tscn
godot/level_builder/level_builder_base/scripts/: nim_group.gd  nim_level.gd  nim_node.gd  polygon_nim_group_2d.gd
godot/nim_game/: empty_game.tscn
nim/: icon.svg.import  node_2d.tscn  project.godot
nim/level_builder/: PolygonNimGroup.tscn
nim/level_builder/level_builder_base/: Area2DNimGroup.tscn
python/: impartial_game.py  naive_solver.py  nim.py  tests.ipynb
rust/: Cargo.toml  db.tex
rust/src/: main.rs
rust/src/pit/: impls.rs  reconstruct.rs
rust/src/taking_game/: mod.rs
src/: main.rs  vec_ops.rs
src/generalized_taking_game/: constructor.rs  impls.rs  mod.rs  moves.rs  new.rs  symmetries.rs  tests.rs
src/generalized_taking_game/closed_generalized/: mod.rs  moves.rs  new.rs  symmetries.rs
src/nim/: mod.rs  pit_reconstructor.rs  test.rs  vec_ops.rs
src/nim/evaluator/: entry.rs  impartial.rs  implementations.rs  mod.rs
src/nim/evaluator_db/: mod.rs
src/nim/generalized/: constructor.rs  dataBase  dataBase.rs  data_base.rs  display.rs  eq.rs  evaluator.rs  impls.rs  mod.rs  moves.rs  new.rs  nimber  nimber.rs  ord.rs  symmetries.rs
src/nim/pit/: cell.rs  display.rs  latex.rs  mod.rs  new.rs  reconstruct.rs
src/pit/: display.rs  impls.rs  mod.rs  new.rs  reconstruct.rs
src/taking_game/: constructor.rs  impls.rs  moves.rs  new.rs  symmetries.rs  util.rs
src/util/: mod.rs  vec_ops.rs
(+12 files in other folders)
