[package]
name = "my_first_rust_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.1" # Or a newer version
queues = "1.0.2"
evaluator = { git = "https://github.com/SecretGmG/impartial_analiser.git", version = "0.1.0" }
